tests/errors/zone-new-own-aggregate.ari
struct Boxed {
  item: own i64,
}

fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::new<Boxed>(ref mut zone, Boxed { item: 1 });
  zone::destroy(zone);
  return 0;
}
